
INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CLASS_DIRECTORY}
	${SOURCE_DIRECTORY}
  #${CBICA_TOOLKIT_BIN_DIR}
)

SET(  
  MainSources
  ${CBICA_Headers}
  ${CBICA_Sources}
  ${ITK_Class_Headers}
  ${ITK_Class_Sources}
)

SET( ITK_TEST_EXE_NAME Test_ITK_Classes )
INCLUDE(${ITK_USE_FILE})
ADD_EXECUTABLE( ${ITK_TEST_EXE_NAME} ItkFunctionTests.cxx ${MainSources} )
TARGET_LINK_LIBRARIES( 
	${ITK_TEST_EXE_NAME}
	${ITK_LIBRARIES}
)

ENABLE_TESTING()

SET( DATA_DIR "${PROJECT_SOURCE_DIR}/data/nifti1/" )

# Test for the imageInfo class
ADD_TEST( NAME ItkImageInfoClass_Test COMMAND ${ITK_TEST_EXE_NAME} -imageInfo "${DATA_DIR}/1.nii")

#Test for the ReadImage function
ADD_TEST( NAME ItkReadUnknownImage_Test COMMAND ${ITK_TEST_EXE_NAME} -readImage "${DATA_DIR}/1.nii")

#Test for the ReadImage function
ADD_TEST( NAME ItkWriteUnknownImage_Test COMMAND ${ITK_TEST_EXE_NAME} -writeImage "${DATA_DIR}/1.nii" "${DATA_DIR}/1_test.nii")

SET_TARGET_PROPERTIES( ${ITK_TEST_EXE_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY  "${PROJECT_BINARY_DIR}/testing/" )
SET_TARGET_PROPERTIES( ${ITK_TEST_EXE_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/testing/" )
SET_TARGET_PROPERTIES( ${ITK_TEST_EXE_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARY_DIR}/testing/" )
SET_TARGET_PROPERTIES( ${ITK_TEST_EXE_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARY_DIR}/testing/" )

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/testing/" )

#MESSAGE( STATUS "itk test bin dir: ${CMAKE_CURRENT_BINARY_DIR}" )
