SET( OPENCV_TEST_EXE_NAME OPENCV_Tests )

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CLASS_DIRECTORY}
	${SOURCE_DIRECTORY}
  #${CBICA_TOOLKIT_BIN_DIR}
)

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/testing/" )

SET(  
  MainSources
  ${CBICA_Headers}
  ${CBICA_Sources}
  ${OPENCV_Class_Headers}
  ${OPENCV_Class_Sources}
)

FIND_PACKAGE( OpenCV 3.0 REQUIRED QUIET )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE( ${OPENCV_TEST_EXE_NAME} OpenCVFunctionTests.cxx ${MainSources} )

SET_TARGET_PROPERTIES( ${OPENCV_TEST_EXE_NAME} PROPERTIES FOLDER "Tests")

TARGET_LINK_LIBRARIES( 
	${OPENCV_TEST_EXE_NAME}
	${OpenCV_LIBRARIES}
)

ENABLE_TESTING()

SET( DATA_DIR "${PROJECT_SOURCE_DIR}/data" )

# Test for the imageInfo class
#ADD_TEST( NAME OpenCVROC_Test COMMAND ${OPENCV_TEST_EXE_NAME} --roc "${DATA_DIR}/roc.csv")
